--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.learnactivity">
+    package="com.example.learnactivity" >
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
@@ -10,17 +10,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.LearnActivity">
-
+        android:theme="@style/Theme.LearnActivity" >
+        <activity
+            android:name=".ActivityForResult"
+            android:exported="false" />
         <activity
             android:name=".Screen2"
-            android:exported="false" />
-        <!--            android:launchMode="singleInstancePerTask"-->
-        <!--            android:taskAffinity=""-->
-        <!--            />-->
+            android:exported="false" /> <!-- android:launchMode="singleInstancePerTask" -->
+        <!-- android:taskAffinity="" -->
+        <!-- /> -->
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.WEB_SEARCH" />
