--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LearnActivity">
         <activity
+            android:name=".thread.LearnThreadActivity"
+            android:exported="false" />
+        <activity
             android:name=".FragmentActivity"
             android:exported="false" />
         <activity
@@ -29,6 +32,7 @@
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.WEB_SEARCH" />
                 <action android:name="android.intent.action.CALL" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
